// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectedSamples /> should render 1`] = `
<Fragment>
  <SelectedSamplesLabel
    count={1}
  />
  <SelectedSamples__SelectedSamplesList
    count={1}
  >
    <Box__BoxGroupSection
      disabled={true}
      key="foo"
    >
      bar
    </Box__BoxGroupSection>
  </SelectedSamples__SelectedSamplesList>
</Fragment>
`;

exports[`<SelectedSamples /> should return when [samples.length=0] 1`] = `
<Fragment>
  <SelectedSamplesLabel
    count={0}
  />
  <SelectedSamples__SelectedSamplesList
    count={0}
  />
</Fragment>
`;
